--- a/entrou.html
+++ b/entrou.html
@@ -19,12 +19,7 @@
     <main>
         <section>
             <div class="box">
-                <p class="pgrandemeio">Fazer Login</p>
-                <p>Usuário:</p>
-                <input type="text">
-                <p>Login:</p>
-                <input type="password">
-                <a href="/entrou.html"><button>login</button></a><br>   
+                <p class="pgrandemeio">Entrou!</p>  
             </div>
         </section>
     </main>
