--- a/entrou.html
+++ b/entrou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Front-End</title>
     <script type='text/javascript' src="/Produtos/main.js"></script>
     <link href="/style.css" rel="stylesheet">
 </head>
